--- a/my-book-app/src/index.html
+++ b/my-book-app/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>BookSphere - Magical Book World</title>
+    <title> MJ - Magical Book World</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A comprehensive book management system for readers and authors">
@@ -15,7 +15,7 @@
     <app-root>
       <div style="display: flex; justify-content: center; align-items: center; height: 100vh; font-family: 'Inter', sans-serif;">
         <div style="text-align: center;">
-          <div style="font-size: 1.5rem; margin-bottom: 1rem; color: #2563eb;">BookSphere</div>
+          <div style="font-size: 1.5rem; margin-bottom: 1rem; color: #2563eb;">MJ Book Paradise</div>
           <div style="display: inline-block; width: 50px; height: 50px; border: 5px solid #e5e7eb; border-radius: 50%; border-top-color: #2563eb; animation: spin 1s linear infinite;"></div>
           <div style="margin-top: 1rem; color: #4b5563;">Loading your library...</div>
         </div>
